--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "latest",
     "@hookform/resolvers": "latest",
+    "@motionone/react": "^10.16.4",
+    "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -37,16 +40,26 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@react-spring/web": "^9.7.5",
+    "@types/gsap": "^3.0.0",
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "gsap": "^3.12.7",
     "input-otp": "1.4.1",
+    "jsonwebtoken": "latest",
     "lucide-react": "^0.454.0",
+    "motion": "^12.9.2",
     "next": "15.2.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "nodemailer": "latest",
+    "prisma": "latest",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
@@ -57,16 +70,11 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "latest",
-    "prisma": "latest",
-    "@auth/core": "latest",
-    "nodemailer": "latest",
-    "@prisma/client": "latest",
-    "bcryptjs": "latest",
-    "jsonwebtoken": "latest",
-    "next-auth": "latest"
+    "zod": "latest"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
